[package]
name = "rust-scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1"
image = "0.24.5"
crypto = "0.5.1"
calamine = "0.16"
ndarray = "0.15.6"
rayon = "1.10.0"  # or the latest version
js-sys = "0.3"  
csv = "1.1"  # Aggiungi questa riga per includere il crate csv
web-sys = { version = "0.3", features = ["console"] }
crc32fast = "1.3"
lz4_flex = "0.11.3"
miniz_oxide = "0.8.0"
sha2 = "0.10.8"
serde = "1.0.215"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.132"



[profile.release]
opt-level = "z"  # Optimize for size
lto = true         # Enable link-time optimization for better performance
panic = "abort"    # Reduce size and avoid the cost of panic handling

[lib]
crate-type = ["cdylib"]
